# six-nine

./: README.md  pyproject.toml  setup.cfg
sixnine/: __init__.py  sxnn_class.py
tests/: test_sn_tools.py
