[tool.poetry]
name = "six-nine"
version = "0.1.0"
description = "Convenient and efficient library for obtaining 69 in various formats"
authors = ["Adrian Makridenko <github.com/lyaguxafrog>"]
license = "GNU General Public v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
