[tool.poetry]
name = "six-nine"
version = "0.1.0"
description = "Convenient and efficient library for obtaining 69 in various formats"
authors = ["Adrian Makridenko <github.com/lyaguxafrog>"]
license = "GNU General Public v3"
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = "sixnine"


[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/lyaguxafrog/six-nine"
